fixed body display to avoid not centered under 1024px

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,9 +18,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+body {
+  display: flex;
+  place-items: center;
 }
